Bug 136276 - Physics based animation effects lose functionality when the slide is duplicated
Summary: Physics based animation effects lose functionality when the slide is duplicated
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Sarper Akdemir (allotropia)
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-30 00:13 UTC by Sarper Akdemir (allotropia)
Modified: 2020-08-31 10:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sarper Akdemir (allotropia) 2020-08-30 00:13:14 UTC
Description:
When a slide with physics based animation effect (for ex: Emphasis->Fall Simulated) is duplicated, even though appearing in the animation effects pane, animation effect don't do anything in the slide show.

Steps to Reproduce:
1.Create a slide that contains a shape with Emphasis->Fall Simulated Animation Effect.
2.Duplicate the slide. 
3.Play the slide show.

Actual Results:
Original slide containing the animation effect do work, but the duplicated one doesn't.

Expected Results:
Both should be identical.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.1.0.0.alpha0+
Build ID: 977a97f3148c0aece0a54304aae81ec44ced07e0
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2020-08-31 10:30:08 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bf0afdbe80933341debfe650c1969ad93ac98833

tdf#136276: fix physics animations faulty duplication

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.