tdf#136276: fix physics animations faulty duplication

Change-Id: Id147eb129e6e0ee65ecd16139e183790b3f9976c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/101658
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>